<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2020 Thiago Lopes Rosa

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:id="@+id/container_leds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">

        <com.thiagorosa.keytita.ViewLed
            android:id="@+id/led_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/led_height" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/container_sequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_leds"
        android:padding="@dimen/sequence_padding"
        android:scrollbarThumbHorizontal="@null">

        <TextView
            android:id="@+id/sequence_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sequence_height"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/create_effect_none"
            android:textColor="@color/primary_text" />

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/container_color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_sequence"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/red"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="#FF0000"
            android:gravity="center" />

        <Button
            android:id="@+id/green"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="#00FF00"
            android:gravity="center" />

        <Button
            android:id="@+id/blue"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="#0000FF"
            android:gravity="center" />

        <Button
            android:id="@+id/yellow"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:gravity="center" />

        <Button
            android:id="@+id/magenta"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="#FF00FF"
            android:gravity="center" />

        <Button
            android:id="@+id/cyan"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="#00FFFF"
            android:gravity="center" />

        <Button
            android:id="@+id/white"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center" />

        <Button
            android:id="@+id/black"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="#000000"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_color2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_color1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/more1"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:gravity="center"
            android:text="@string/create_add" />

        <Button
            android:id="@+id/more2"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:gravity="center"
            android:text="@string/create_add" />

        <Button
            android:id="@+id/more3"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:gravity="center"
            android:text="@string/create_add" />

        <Button
            android:id="@+id/more4"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:gravity="center"
            android:text="@string/create_add" />

        <Button
            android:id="@+id/more5"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:gravity="center"
            android:text="@string/create_add" />

        <Button
            android:id="@+id/more6"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:gravity="center"
            android:text="@string/create_add" />

        <Button
            android:id="@+id/more7"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:gravity="center"
            android:text="@string/create_add" />

        <Button
            android:id="@+id/more8"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_height"
            android:layout_margin="@dimen/color_margin"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:gravity="center"
            android:text="@string/create_add" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/container_commands"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@id/container_color2"
        android:layout_centerInParent="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_margin"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginBottom="@dimen/section_margin"
                android:background="@color/divider"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/color_random"
                    style="@style/BaseButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/color_random" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rainbow_full_fixed"
                    style="@style/BaseButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rainbow_full_fixed" />

                <Button
                    android:id="@+id/rainbow_full_moving"
                    style="@style/BaseButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rainbow_full_moving" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rainbow_single_shifting"
                    style="@style/BaseButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rainbow_single_shifting" />

                <Button
                    android:id="@+id/rainbow_gradual_moving"
                    style="@style/BaseButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rainbow_gradual_moving" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/speed_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />

                <SeekBar
                    android:id="@+id/speed_value"
                    style="@style/SeekBarTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:max="250"
                    android:progress="50" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/brightness_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />

                <SeekBar
                    android:id="@+id/brightness_value"
                    style="@style/SeekBarTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:max="100"
                    android:progress="67" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/section_margin" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
